@@ -1,11 +1,14 @@
-from seemps.state import MPS, MPSSum, Strategy, DEFAULT_STRATEGY
-from seemps.operators import MPOList
-from seemps.qft import qft_mpo
-from seemps.analysis.operators import p_to_n_mpo, p_mpo
+from ...state import MPS, MPSSum, Strategy, DEFAULT_STRATEGY
+from ...operators import MPOList
+from ...qft import qft_mpo
+from ..operators import p_to_n_mpo, p_mpo
+from ..mesh import QuantizedInterval, IntervalTuple
 
 
 def fourier_derivative_mpo(
-    L: int, order: int, dx: float = 1.0, strategy: Strategy = DEFAULT_STRATEGY
+    order: int,
+    interval: QuantizedInterval | IntervalTuple,
+    strategy: Strategy = DEFAULT_STRATEGY,
 ) -> MPOList:
     """Nth-order derivative operator via Quantum Fourier Transform.
 
@@ -15,16 +18,20 @@ def fourier_derivative_mpo(
 
     Parameters
     ----------
-    L : int
-        Length of the quantum register
     order : int
         Order of the derivative
+    interval: QuantizedInterval | IntervalTuple
+        The interval over which the function is defined.
 
     Returns
     -------
     MPOList
         Operator that implements the derivative.
     """
+    if isinstance(interval, tuple):
+        interval = QuantizedInterval(*interval)
+    L = interval.qubits
+    dx = interval.step
     forward_qft = qft_mpo(L, -1, strategy)
     if order == 1:
         P_op = 1j * p_mpo(L, dx)
@@ -34,7 +41,9 @@ def fourier_derivative_mpo(
     return (backward_qft @ P_op).reverse() @ forward_qft
 
 
-def fourier_derivative(psi: MPS | MPSSum, order: int, L: float) -> MPS | MPSSum:
+def fourier_derivative(
+    psi: MPS | MPSSum, order: int, interval: QuantizedInterval | IntervalTuple
+) -> MPS | MPSSum:
     """Nth-order derivative via Quantum Fourier Transform.
 
     Compute the `order`-th spatial derivative of a quantum state `psi`
@@ -45,16 +54,14 @@ def fourier_derivative(psi: MPS | MPSSum, order: int, L: float) -> MPS | MPSSum:
     ----------
     psi : MPS or MPSSum
         Quantum state in position representation
-    L : float
-        Length of the spatial domain
     order : int
         Order of the derivative
+    interval: QuantizedInterval | IntervalTuple
+        The interval over which the function is defined.
 
     Returns
     -------
     d_psi : MPS or MPSSum
         Quantum state encoding the derivative
     """
-    N = psi.size
-    dx = L / (2**N)
-    return fourier_derivative_mpo(N, order, dx).apply(psi)
+    return fourier_derivative_mpo(order, interval).apply(psi)
